# sock

./: .gitignore  BENCH.md  CHECKLIST.md  Cargo.toml  FIRST_PRINCIPLES_REPORT.md  FOZZYTESTS.md  README.md  SPEC.md  TMH.md  VLLM-OPTIMIZE.md  fozzy.toml  requirements.txt  runtime.buildplan.json
app/: Cargo.toml
app/src/: lib.rs  main.rs
app/tests/: cli.rs  measurement_cli.rs
core/: Cargo.toml
core/src/: accelerator.rs  adapter.rs  backend.rs  bundle.rs  canonical.rs  diagnostics.rs  entrypoint.rs  governance.rs  identity.rs  integration.rs  kv_layout.rs  lib.rs  materialization.rs  measurement.rs  model.rs  operator.rs  optimization.rs  replay.rs  request.rs  rewrite.rs  runtime.rs  soc.rs  verification.rs
cuda-shim/: README.md  run_matrix.py
docs/: kv-layouts.md
engine/: Cargo.toml
fozzy/: sock_smoke.fzy  verification_program.json
scripts/: rocm_wsl_preflight.py  rocm_wsl_qwen_smoke.py  rocm_wsl_smoke_matrix.py  run_rocm_wsl_smoke.sh  runtime_cli.py  runtime_entrypoints.py  sock_endpoint_bench.py  sock_endpoint_bench_suite.py  sock_endpoint_inference.py  sock_entrypoint_smoke_matrix.py  sock_install_runtime.py  sock_runtime_env.py  sock_vllm_cli.py  sock_vllm_entrypoints.py  verify_fozzy_program.sh
tests/: backend.decision.fozzy.json  benchmark.matrix.fozzy.json  build.cache_invalidation.fozzy.json  build.decode_backend_scope.fozzy.json  build.early_serve_readiness.fozzy.json  build.flashinfer_cache_scope.fozzy.json  build.invalid_subset_scope.fozzy.json  build.named_compile_regions.fozzy.json  build.no_new_compile_closure.fozzy.json  build.prefill_scope.fozzy.json  build.prefill_warmup_scope.fozzy.json  build.reuse_decision.fozzy.json  (+78 more)
vllm/: REVISION  (+2 more)
(+174 files in other folders)
